--- a/.travis.yml
+++ b/.travis.yml
@@ -6,5 +6,8 @@ before_install:
   - sudo apt-get update
 install:
   - sudo apt-get install rust-nightly
+  - cd lib/rust-http
+  - ./configure
+  - make
 script:
   - make build
