--- a/.travis.yml
+++ b/.travis.yml
@@ -2,10 +2,10 @@ language: rust
 compiler:
   - rustc
 before_install:
-  - yes | sudo add-apt-repository ppa:hansjorg/rust
-  - sudo apt-get update
+  - wget http://static.rust-lang.org/dist/rust-nightly-x86_64-unknown-linux-gnu.tar.gz
+  - tar xf rust-nightly-x86_64-unknown-linux-gnu.tar.gz
 install:
-  - sudo apt-get install rust-nightly
+  - sudo ./rust-nightly-x86_64-unknown-linux-gnu/install.sh
   - rustc -v
   - cd lib/rust-http
   - ./configure
